Fix docker file to run on mac

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,8 +1,7 @@
-version: '3.8'
-
 services:
   wordpress:
     image: wordpress:latest
+    platform: linux/amd64  # Forzar uso de amd64
     restart: always
     ports:
       - "8080:80"
@@ -19,6 +18,7 @@ services:
 
   db:
     image: mysql:5.7
+    platform: linux/amd64  # Forzar uso de amd64
     restart: always
     environment:
       MYSQL_DATABASE: wordpress
@@ -29,6 +29,7 @@ services:
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
+    platform: linux/amd64  # Forzar uso de amd64
     restart: always
     ports:
       - "8081:80"
